Adding a reference to the zettelkasten method.

--- a/_posts/2024-07-07-obsidian.md
+++ b/_posts/2024-07-07-obsidian.md
@@ -20,6 +20,11 @@ Suppose you satisfy one or more of the following criteria:
 
 All the above situations have something in common: it would be quite amazing and time-saving if you can set-up a centralized system, which is private to you, using which you can maintain your own *knowledge base*, i.e a nicely structured repository of ideas/work/papers/books, or really any other data you can think of, using which you can analyze your thoughts, collect them, and visualize them. This is exactly what a *knowledge base manager* does, and I'll describe one of the best tools for this: [`obsidian`](https://obsidian.md/).
 
+> ##### The *Zettelkasten Method* 
+>
+> This is known as the *Zettelkasten Method*, wherein you create notes and connect them together to make a web of knowledge. [Read more about this method here](https://zettelkasten.de/overview/). 
+{: .block-tip }
+
 # The tools
 
 For this post, I'll be using the following tools:
