Adding a ref to xodo.

--- a/_posts/2024-07-07-obsidian.md
+++ b/_posts/2024-07-07-obsidian.md
@@ -124,4 +124,4 @@ research_paper_notes/*/*.yaml
 
 You're all set! Now you can freely add new papers, notes, documents, or anything else to your vault! I love to use Obsidian's knowledge graph to visualize relationships between my ideas.
 
-You can even annotate research paper PDFs on your Android device (I do it on my tablet using a stylus), and the changes will reflect on your linux machine too!
+You can even annotate research paper PDFs on your Android device (I do it on my tablet using a stylus, using [`xodo`](https://xodo.com/)), and the changes will reflect on your linux machine too!
