Added link to the colbert post on the homepage.

--- a/_posts/2024-08-02-colbert.md
+++ b/_posts/2024-08-02-colbert.md
@@ -92,7 +92,7 @@ are just convenience wrappers, and you can perform all the actual operations by 
 The `ColBERTConfig` has the right defaults for most use cases, enabling it to be used off-the-shelf. For instance, for
 most of your use cases, you can just define a `ColBERTConfig` like this:
 
-```python
+```julia
 config = ColBERTConfig(
     use_gpu = true,                                             # if you're using a GPU
     checkpoint = "/home/codetalker7/models/colbertv2.0",        # I usually store model weights in $HOME/models/
