--- a/assets/bibtex/iclr2025.bib
+++ b/assets/bibtex/iclr2025.bib
@@ -1,8 +1,9 @@
-@inproceedings{
-anonymous2025you,
-title={You Only Prune Once: Designing Calibration-Free Model Compression With Policy Learning},
-author={Anonymous},
-booktitle={The Thirteenth International Conference on Learning Representations},
-year={2025},
-url={https://openreview.net/forum?id=5RZoYIT3u6}
+@misc{sengupta2025pruneoncedesigningcalibrationfree,
+      title={You Only Prune Once: Designing Calibration-Free Model Compression With Policy Learning}, 
+      author={Ayan Sengupta and Siddhant Chaudhary and Tanmoy Chakraborty},
+      year={2025},
+      eprint={2501.15296},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2501.15296}, 
 }
